--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ OPTIMIZER_ENABLED             = true
 OPTIMIZER_RUNS                = 1000
 GAS_REPORTER_ENABLED          = false
 CONTRACT_SIZER_ENABLED        = false
-ALLOW_UNLIMITED_CONTRACT_SIZE = false
+ALLOW_UNLIMITED_CONTRACT_SIZE = true
 HARDHAT_MNEMONIC              = test test test test test test test test test test test junk
 GANACHE_RPC                   = http://127.0.0.1:7545
 GANACHE_MNEMONIC              = test test test test test test test test test test test junk
